izmjena index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <!-- ovako se pisu komentari u html...a koji nec-->
+    <!-- ovo je sad drugi komentar-->
     <div class="naslov">
     <div class="prvi">
 <h5> +387 37 713 245 </h5>
