--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 </head>
 <body>
 
-    <!-- ovo je sad drugi komentar-->
-    <div class="naslov">
+    <div class="menuBar"> <!--s obzirom da vise divova treba imati fixnu poziciju, onda i sve stavis u jedan div-->
+
+    <div class="naslov"> <!--zasto ovaj i ovaj ispod-->
     <div class="prvi">
 <h5> +387 37 713 245 </h5>
 <h4>info@refix.ba</h4>
     </div>
     </div>
-<div class="nav">
+
+    
+<div class="nav menuBarSecond">  <!--dodao sam jos jedan class jer imaju zajednicku pozadinu bijelu pa da lakse dodam-->
     <h1><span>R</span>efix</h1>
     <h6>Gradjevinski materijal</h6>
 </div>
 
-<div class="nav2">
+<div class="nav2 menuBarSecond">
     <ul>
         <li><a href="#">Pocetna</a></li>
         <li><a href="#">O nama </a></li>
@@ -31,6 +34,8 @@
         <li><a href="#">Kontakt</a></li>
     </ul>
 </div>
+</div>
+
 <div class="refko">
     <div class="jedan">
         <h1>NOVO U PONUDI</h1>
