--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="menuBar"> <!--s obzirom da vise divova treba imati fixnu poziciju, onda i sve stavis u jedan div-->
 
-    <div class="naslov"> <!--zasto ovaj i ovaj ispod-->
+    <div class="naslov"> <!--zasto ovaj i ovaj ispod   bio zaboravio da treba taj da bude uvijek u pokretu a da bude ispred svih ostalih i onda ga samo ubacio tako-->
     <div class="prvi">
 <h5> +387 37 713 245 </h5>
 <h4>info@refix.ba</h4>
