--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     <button ><a href="#" class="tekst">Više informacija</a></button>
     </div>
 </div>
-<div class="service" >
+
+
+<!--section NASE USLUGE-->
+<section class="service" > <!--ovdje sam stavio section umjesto div..jer to je ono sto sam ti pricao da je section ako na 
+                                jednoj stranici imas vise razlicitih stvari onda stavis section i plus uvijek stavi komentar da
+                            se zna koji je to dio...jer ako radis s vise ljudi na projektu pogubice se, nece znati gdje je sta-->
     <div class="title">
         <h2>Naše usluge</h2>
     </div>
@@ -94,7 +99,7 @@
     </div>
 </div>
 </div>
-</div>
+</section>
 
 <div class="partneri">
     <h2>Partneri</h2>
